--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,7 +1,8 @@
-
 // Font Families
-$sans-serif: 'Josefin Sans', sans-serif;
-$sans-serif2: 'Open Sans', sans-serif;
+$sans-serif: 'Josefin Sans',
+sans-serif;
+$sans-serif2: 'Open Sans',
+sans-serif;
 
 // Font Weights
 $light: 300;
@@ -14,3 +15,8 @@ $bold: 700;
 $header: "../assets/eberhard-grossgasteiger-338314-unsplash.jpg";
 $bonafind: "../assets/bonafind.png";
 $vue-notes: "../assets/vue-notes.png";
+$django-blog: "../assets/django-blog.png";
+
+// Div Colors
+
+
