--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -89,94 +89,119 @@ body {
   margin: 0 auto;
   height: auto;
 
-  .projects {
-    @include flex-column-auto;
-    height: auto;
+  .projects-container {
+    @include container;
+    width: 100%;
 
-    .projects-header {
-      @include section-header;
-    }
+    .img-container {
+      height: 36vh;
+      position: relative;
+      z-index: 10;
 
-    .projects-container {
-      @include container;
-      width: 100%;
-
-      .img-container {
-        width: 55%;
-        height: 36vh;
-        .inner-text{
-          height: 100%;
-          width: 40%;
-          padding-left: 20px;
-          display: flex;
-          flex-flow: column;
-          justify-content: center;
-          .inner-header{
-            color: white;
-            font-size: 2rem;
-            padding-bottom: 15px;
-            border-bottom: 1px solid white;
-          }
-          .inner-description{
-            padding-top: 15px;
-            color: white;
-            font-size: 1rem;
-          }
-        }
-      }
-
-      .bonafind {
-        @include project-image1;
-        @include img-hover;
-        
-      }
-
-      .notes-vue {
-        @include project-image2;
-      }
-
-      .description {
-        width: 45%;
-        height: 36vh;
-      }
-      .top {
-        @include description1;
-      }
-      .bottom{
-        @include description2;
-      }
-    }
-  }
-
-  .technologies {
-    @include flex-column-auto;
-    background-color: #2aa091;
-    height: auto;
-
-    .technologies-header {
-      @include section-header;
-      color: white;
-    }
-
-    .technologies-container {
-      @include container;
-      padding-right: 10%;
-      align-items: center;
-
-      a {
-        margin-top: 50px;
+      .img-text {
+        width: 100%;
+        height: 100%;
         padding-left: 10%;
-        width: 10%;
-        height: auto;
+        z-index: 30;
+        position: relative;
+        opacity: .9;
+        transition: opacity .5s;
+        display: flex;
+        flex-flow: column;
+        justify-content: center;
 
-        img {
-          width: 100%;
-          height: auto;
+        &:hover {
+          opacity: 0.0;
+        }
+
+        .inner-header {
+          width: 30%;
+          color: white;
+          font-size: 2rem;
+          padding-bottom: 15px;
+          border-bottom: 2px solid white;
+          z-index: 40;
+          position: relative;
+          opacity: 1;
+        }
+
+        .inner-description {
+          text-transform: uppercase;
+          padding-top: 15px;
+          color: white;
+          font-size: .8rem;
+          letter-spacing: 1px;
+          z-index: 40;
+          position: relative;
+          opacity: 1;
         }
       }
     }
 
+    .a {
+      width: 55%;
+    }
+
+    .b {
+      width: 45%;
+    }
+
+    .bonafind {
+      @include project-image1;
+    }
+
+    .notes-vue {
+      @include project-image2;
+    }
+
+    .django-blog {
+      @include project-image3;
+    }
+
+    .description {
+      width: 45%;
+      height: 36vh;
+    }
+
+    .top {
+      @include description1;
+    }
+
+    .bottom {
+      @include description2;
+    }
   }
+}
+
+.technologies {
+  @include flex-column-auto;
+  background-color: #2aa091;
+  height: auto;
+
+  .technologies-header {
+    @include section-header;
+    color: white;
+  }
+
+  .technologies-container {
+    @include container;
+    padding-right: 10%;
+    align-items: center;
+
+    a {
+      margin-top: 50px;
+      padding-left: 10%;
+      width: 10%;
+      height: auto;
+
+      img {
+        width: 100%;
+        height: auto;
+      }
+    }
+  }
+
+
 
   .contact {
     @include flex-column-auto;
@@ -229,4 +254,20 @@ body {
 
 .toggler {
   visibility: hidden;
+}
+
+.blue {
+  background-color: navy;
+}
+
+.purple {
+  background-color: purple;
+}
+
+.red {
+  background-color: red;
+}
+
+.orange {
+  background-color: orange;
 }
