--- a/css/styles.css
+++ b/css/styles.css
@@ -138,46 +138,29 @@ body {
   background-color: black;
   box-sizing: border-box;
   font-family: "Josefin Sans", sans-serif;
-  z-index: 0; }
-
-.scroll-buttons {
-  width: 10%;
-  left: 0;
-  height: 100vh;
-  position: fixed;
-  display: flex;
-  flex-flow: column;
-  justify-content: space-between;
-  align-items: flex-end;
-  box-sizing: border-box; }
-  .scroll-buttons img {
-    width: 85%;
-    height: auto;
-    align-self: flex-start;
-    z-index: 100; }
-    @media (max-width: 700px) {
-      .scroll-buttons img {
-        width: 100%; } }
+  z-index: 0;
+  overflow: hidden; }
 
 .header {
-  background: linear-gradient(rgba(5, 2, 38, 0.927), rgba(5, 2, 38, 0.927)), url("../assets/eberhard-grossgasteiger-338314-unsplash.jpg") no-repeat center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background-color: yellow;
   display: flex;
   flex-flow: column;
   align-items: center;
   justify-content: space-evenly;
-  height: 80vh; }
+  height: 80vh;
+  box-sizing: border-box; }
   .header h1 {
-    color: white;
+    color: black;
     text-transform: uppercase;
-    font-size: 8rem;
+    font-size: 5rem;
     font-weight: 500;
-    width: 86%;
+    width: 100%;
+    height: 50%;
     transition: font-size .25s;
-    border-bottom: 2px solid white; }
+    border-bottom: 5px solid black;
+    display: flex;
+    align-items: center;
+    transform: skewY(-10deg); }
     @media (max-width: 900px) {
       .header h1 {
         font-size: 7rem; } }
@@ -194,10 +177,14 @@ body {
       .header h1 {
         font-size: 3.5rem; } }
   .header p {
+    background-color: black;
+    width: 150%;
+    height: 0%;
     color: white;
-    font-family: "Open Sans", sans-serif;
+    font-family: "Cardo";
     text-transform: uppercase;
-    font-size: 1.5rem; }
+    font-size: 1.5rem;
+    transform: skewY(-10deg); }
 
 .main-container {
   margin: 0 auto;
@@ -210,7 +197,7 @@ body {
     box-sizing: border-box;
     width: 100%; }
     .main-container .projects-container .img-container {
-      height: 36vh;
+      height: 50vh;
       position: relative;
       z-index: 10; }
       .main-container .projects-container .img-container .img-text {
