--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,8 +1,7 @@
 // Font Families
 $sans-serif: 'Josefin Sans',
 sans-serif;
-$sans-serif2: 'Open Sans',
-sans-serif;
+$serif: 'Cardo';
 
 // Font Weights
 $light: 300;
